--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -31,6 +31,6 @@ clean-targets:         # directories to be removed by `dbt clean`
 # files using the `{{ config(...) }}` macro.
 models:
   dsin45_template:
-    # Config indicated by + and applies to all files under models/example/
-    example:
+    # Staging models are typically views for fast development iteration
+    staging:
       +materialized: view
